# thekeep-platform

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  ansible.cfg  bootstrap-production.sh  bootstrap.sh  designdoc.md  site.yml  teardown-cluster.sh
ansible/: ansible.cfg  configure_espocrm_email.yml  dev_vars.yml.example  inventory.production.ini.example  production_vars.yml.example  setup_dev_environment.yml  setup_k3s_demo.yml  setup_k3s_production.yml
codereview/: chat-feedback.md  chat-planreview.md  codex-feedback.md  codex-plan.md  codex-planreview.md  codex-remediation-report.md  gemini-feedback.md  gemini-planreview.md  human-feedback.md  junie-remediation-report.md
demo/: README.md
docs/: ai-gateway.md  ai-hardening.md  amurex-evaluation.md  app-support-contract.md  architecture.md  authentik-sso.md  espocrm-mcp-evaluation.md  integration-boundaries.md  knowledge-memory.md  leantime-mcp-routing.md  local-iac-testing.md  meeting-intelligence.md  newapps-leantime-csv-import-plan.md  newappsplan.md  optional-crm-apps.md  roadmap.md  security.md  vexa-evaluation.md
examples/: app-instances.example.json  automation-job-source.fixture.json  espocrm-assistant.instance.example.json  lead-triage-source-export.fixture.json  mcp-gateway.authorization-server.example.json  (+2 more)
group_vars/: all.yml
services/espocrm-assistant/: Dockerfile  README.md  pyproject.toml
services/espocrm-assistant/src/espocrm_assistant/: __init__.py  apply.py  client.py  executor.py  http_server.py  policy.py  server.py  service.py
services/espocrm-assistant/tests/: test_assistant.py
(+120 files in other folders)
