[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "thekeep-espocrm-assistant"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["mcp>=1.14,<2"]

[project.scripts]
thekeep-espocrm-mcp = "espocrm_assistant.server:main"
thekeep-espocrm-http = "espocrm_assistant.http_server:main"
thekeep-espocrm-apply = "espocrm_assistant.apply:main"

[tool.setuptools.packages.find]
where = ["src"]
